--- a/package.json
+++ b/package.json
@@ -25,5 +25,7 @@
     "lodash": "^4.17.11",
     "vue": "^2.6.6"
   },
-  "devDependencies": {}
+  "devDependencies": {
+    "parcel-bundler": "^1.11.0"
+  }
 }
