--- a/package.json
+++ b/package.json
@@ -23,9 +23,16 @@
   "homepage": "https://github.com/buyuanwanli/Aloe-UI#readme",
   "dependencies": {
     "lodash": "^4.17.11",
-    "vue": "^2.6.6"
+    "vue": "^2.6.7",
+    "vue-hot-reload-api": "^2.3.2"
   },
   "devDependencies": {
-    "parcel-bundler": "^1.11.0"
+    "@vue/component-compiler-utils": "^2.6.0",
+    "parcel-bundler": "^1.11.0",
+    "sass": "^1.17.1",
+    "vue-template-compiler": "^2.6.7"
+  },
+  "alias": {
+    "vue": "./node_modules/vue/dist/vue.common.js"
   }
 }
