--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "@vue/component-compiler-utils": "^2.6.0",
+    "chai": "^4.2.0",
     "parcel-bundler": "^1.11.0",
     "sass": "^1.17.1",
     "vue-template-compiler": "^2.6.7"
