--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "一个简单的UI框架",
   "private": true,
   "scripts": {
+    "start":"parcel index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
   },
