--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "Aloe-UI",
+  "name": "aloe-ui",
   "version": "0.0.1",
   "description": "一个简单的UI框架",
-  "private": true,
+  "main": "index.js",
   "scripts": {
     "start":"parcel index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache & karma start",
