--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
   "name": "aloe-ui",
-  "version": "0.0.1",
+  "version": "0.0.1-1",
   "description": "一个简单的UI框架",
   "main": "index.js",
   "scripts": {
-    "start":"parcel index.html --no-cache",
+    "start": "parcel index.html --no-cache",
     "dev-test": "parcel watch test/* --no-cache & karma start",
     "test": "parcel build test/* --no-cache --no-minify && karma start --single-run"
   },
@@ -40,6 +40,7 @@
     "karma-sinon-chai": "^2.0.2",
     "mocha": "^6.0.2",
     "parcel-bundler": "^1.11.0",
+    "parcel-plugin-eslint": "^1.0.6",
     "sass": "^1.17.1",
     "sinon": "^7.2.4",
     "sinon-chai": "^3.3.0",
